@@ -12,6 +12,8 @@
 /**
     This category allows any object to satisfy the HCSelfDescribing protocol.
 
+    @b Deprecated: No longer needed now that @ref appendDescriptionOf: handles all types of objects.
+
     @ingroup core
  */
 @interface NSObject (HCSelfDescribingValue)
@@ -21,6 +23,6 @@
 
     @param description  The description to be appended to.
  */
-- (void) describeTo:(id<HCDescription>)description;
+- (void) describeTo:(id<HCDescription>)description __attribute__((deprecated));
 
 @end
