@@ -2,6 +2,7 @@ Full documentation: http://jonreid.github.com/OCHamcrest/
 Latest sources: https://github.com/jonreid/OCHamcrest
 Hamcrest information: http://code.google.com/p/hamcrest/
 
+
 == Version 1.2 == *IN PROGRESS*
 
 * New matchers:
@@ -9,11 +10,14 @@ Hamcrest information: http://code.google.com/p/hamcrest/
   - "hasCountOf" matches collections for which -count equals a given count.
   - "empty" matches empty collection.
 
-* Fixed assertThat to have the matcher give a full description of a mismatch, not just the mismatched value. This means OCHamcrest will give even more useful information!
+* Fixed assertThat to describe the diagnosis of the mismatch, not just the mismatched value. OCHamcrest will now give even more useful information.
 
 * Since nil cannot be directly stored in collections, collection matchers now guard against nil.
 
+* Expanded BaseDescription's -appendDescriptionOf: to handle all types of values, not just self-describing values.
+
 * Deprecated:
+  - Description's -appendValue: no longer needed; call -appendDescriptionOf: instead.
   - Renamed HCInvocation's helper class method +createInvocationForSelector:onClass: to +invocationForSelector:onClass:
   - New helper function HCRequireNonNilObject should be used in place of HCRequireNonNilString.
 
